--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="https://xero.up.railway.app/Xero.png" />
+    <link rel="icon" href="https://xerobots.github.io/Xero.png" />
     <title>Xero-Bots</title>
 
     <style>
