--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
         }
 
         .title {
-            font-size: 2.5em;
+            font-size: 2.5em; /* Adjusted for your original size */
             color: #e63946;
             margin-bottom: 20px;
             white-space: nowrap;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-            transition: color 2s ease-in-out;
         }
 
         .instructions {
@@ -67,13 +66,18 @@
             font-size: 1.5em;
             margin-top: 20px;
             color: #e63946;
-            transition: color 2s ease-in-out;
         }
 
         @media (max-width: 768px) {
-            .title { font-size: 2em; }
-            .instructions { font-size: 1em; }
-            #countdown { font-size: 1.2em; }
+            .title {
+                font-size: 2em;
+            }
+            .instructions {
+                font-size: 1em;
+            }
+            #countdown {
+                font-size: 1.2em;
+            }
         }
     </style>
 </head>
@@ -85,64 +89,11 @@
         <h1 class="title">Xero-Bots</h1>
         <div class="instructions">
             <h2>Click <a href="https://discord.com/invite/F96ucGKT85" target="_blank">here</a> to join our Discord server or wait to be redirected.</h2>
-            <p id="countdown">Redirecting in 30 seconds...</p>
+            <p id="countdown">Redirecting in 15 seconds...</p>
         </div>
     </div>
 
     <script>
-        // Title animation
-        const titles = [
-            "Smarter. Better. Faster.", 
-            "Xero at your fingertips", 
-            "Your future, powered by Xero.",
-            "Xero: Simplify your world.",
-            "Xero: Excellence at a glance.",
-            "Xero: Powering your potential."
-        ];
-        let titleIndex = 0, currentTitle = "", isDeleting = false, charIndex = 0;
-        const titleElement = document.querySelector('.title');
-
-        function typeTitle() {
-            if (!titleElement) return;
-            const text = titles[titleIndex];
-            if (isDeleting) {
-                charIndex--;
-            } else {
-                charIndex++;
-            }
-            titleElement.textContent = text.substring(0, charIndex);
-
-            if (!isDeleting && charIndex === text.length) {
-                setTimeout(() => isDeleting = true, 2000);
-            } else if (isDeleting && charIndex === 0) {
-                isDeleting = false;
-                titleIndex = (titleIndex + 1) % titles.length;
-            }
-            setTimeout(typeTitle, isDeleting ? 50 : 100);
-        }
-        typeTitle();
-
-        // Countdown and redirection
-        let timeLeft = 30;
-        const countdownElement = document.getElementById("countdown");
-        function updateCountdown() {
-            countdownElement.textContent = `Redirecting in ${timeLeft} seconds...`;
-            if (timeLeft <= 0) {
-                window.location.href = "https://discord.com/invite/F96ucGKT85";
-            }
-            timeLeft--;
-        }
-        setInterval(updateCountdown, 1000);
-
-        // Smooth color transition for red text
-        function changeColor() {
-            const hue = (Date.now() / 20) % 360;
-            document.querySelector('.title').style.color = `hsl(${hue}, 100%, 50%)`;
-            document.querySelector('#countdown').style.color = `hsl(${hue}, 100%, 50%)`;
-            requestAnimationFrame(changeColor);
-        }
-        changeColor();
-
         // Background animation
         const canvas = document.getElementById("backgroundCanvas");
         const ctx = canvas.getContext("2d");
@@ -151,6 +102,7 @@
         const dots = [];
         const dotCount = 100;
         const maxDistance = 150;
+        let hue = 0; // Initial hue for color rotation
 
         function createDots() {
             for (let i = 0; i < dotCount; i++) {
@@ -173,13 +125,90 @@
             }
         }
 
-        function animateBackground() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            drawDots();
-            requestAnimationFrame(animateBackground);
+        function connectDots() {
+            for (let i = 0; i < dots.length; i++) {
+                for (let j = i + 1; j < dots.length; j++) {
+                    const dx = dots[j].x - dots[i].x;
+                    const dy = dots[j].y - dots[i].y;
+                    const distance = Math.sqrt(dx * dx + dy * dy);
+                    if (distance < maxDistance) {
+                        // Use HSL color format, increasing the hue value
+                        ctx.strokeStyle = hsl(${hue}, 100%, 50%);
+                        ctx.lineWidth = 0.5;
+                        ctx.beginPath();
+                        ctx.moveTo(dots[i].x, dots[i].y);
+                        ctx.lineTo(dots[j].x, dots[j].y);
+                        ctx.stroke();
+                    }
+                }
+            }
         }
+
+        function updateDots() {
+            for (const dot of dots) {
+                dot.x += dot.velocityX;
+                dot.y += dot.velocityY;
+                if (dot.x < 0 || dot.x > canvas.width) dot.velocityX *= -1;
+                if (dot.y < 0 || dot.y > canvas.height) dot.velocityY *= -1;
+            }
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            updateDots();
+            drawDots();
+            connectDots();
+
+            // Increment the hue value to create a rotating color effect
+            hue = (hue + 1) % 360; // Loop back to 0 after reaching 360
+            requestAnimationFrame(animate);
+        }
+
         createDots();
-        animateBackground();
+        animate();
+
+        // Title animation
+        const titles = [
+            "Smarter. Better. Faster.",
+            "Xero at your fingertips",
+            "Your future, powered by Xero.",
+            "Choose Xero, choose excellence.",
+            "Stay ahead, stay Xero.",
+        ];
+        let titleIndex = 0;
+        let currentTitle = "";
+        let isDeleting = false;
+        function typeTitle() {
+            const titleElement = document.querySelector('.title');
+            const currentText = titles[titleIndex];
+            if (!isDeleting && currentTitle.length < currentText.length) {
+                currentTitle += currentText.charAt(currentTitle.length);
+            } else if (isDeleting && currentTitle.length > 0) {
+                currentTitle = currentTitle.slice(0, -1);
+            }
+            titleElement.textContent = currentTitle;
+            if (!isDeleting && currentTitle === currentText) {
+                setTimeout(() => isDeleting = true, 2000);
+            } else if (isDeleting && currentTitle === "") {
+                isDeleting = false;
+                titleIndex = (titleIndex + 1) % titles.length;
+            }
+            setTimeout(typeTitle, isDeleting ? 50 : 100);
+        }
+        typeTitle();
+
+        // Countdown and redirection
+        let timeLeft = 15;
+        const countdownElement = document.getElementById("countdown");
+        function updateCountdown() {
+            countdownElement.textContent = Redirecting in ${timeLeft} seconds...;
+            if (timeLeft <= 0) {
+                window.location.href = "https://discord.com/invite/F96ucGKT85";
+            }
+            timeLeft--;
+        }
+        setInterval(updateCountdown, 1000);
     </script>
+
 </body>
 </html>
